[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/popup_settings.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.376471, 0.376471, 0.439216, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.152941, 0.152941, 0.211765, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.262745, 0.262745, 0.309804, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 1, 1, 1, 1 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Shadow" ]

[sub_resource type="DynamicFont" id=1]

size = 56
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="main_menu" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="play_button" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 320.0
margin_right = 560.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.921569, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="settings_button" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 400.0
margin_right = 560.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.921569, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="about_button" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 480.0
margin_right = 560.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.921569, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "About"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="exit_button" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 560.0
margin_right = 560.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.921569, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="popup_about" type="Popup" parent="." index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Focus", "Popup" ]

[node name="popup_about_polygon_1" type="Polygon2D" parent="popup_about" index="0"]

position = Vector2( -45.7143, -51.4286 )
scale = Vector2( 1.07143, 1.14286 )
polygon = PoolVector2Array( 80, 80, 160, 80, 1200, 80, 1200, 640, 80, 640 )
uv = PoolVector2Array(  )
color = Color( 0.262745, 0.262745, 0.309804, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="popup_about_polygon_2" type="Polygon2D" parent="popup_about" index="1"]

position = Vector2( -3.8147e-006, -7.15256e-006 )
scale = Vector2( 1, 1 )
polygon = PoolVector2Array( 80, 80, 1200, 80, 1200, 640, 80, 640 )
uv = PoolVector2Array(  )
color = Color( 0.376471, 0.376471, 0.439216, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="popup_about_label" type="Label" parent="popup_about" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 40.0
margin_right = 1160.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_shadow = Color( 0.196078, 0.243137, 0.309804, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "About:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="popup_settings" type="Popup" parent="." index="5"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 40.0
margin_right = 1240.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
script = ExtResource( 3 )
_sections_unfolded = [ "Dialog", "Popup" ]

[node name="popup_settings_polygon_1" type="Polygon2D" parent="popup_settings" index="7"]

position = Vector2( -80, -80 )
scale = Vector2( 1.07143, 1.14286 )
polygon = PoolVector2Array( 74.6667, 70, 1194.67, 70, 1194.67, 630, 821.333, 630, 784, 665, 485.333, 665, 448, 630, 74.6667, 630 )
uv = PoolVector2Array(  )
color = Color( 0.262745, 0.262745, 0.309804, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="popup_setttings_polygon_2" type="Polygon2D" parent="popup_settings" index="8"]

position = Vector2( -40, -40 )
scale = Vector2( 1, 1 )
polygon = PoolVector2Array( 80, 80, 1200, 80, 1200, 640, 80, 640 )
uv = PoolVector2Array(  )
color = Color( 0.376471, 0.376471, 0.439216, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = true
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="popup_settings_label" type="Label" parent="popup_settings" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1200.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_shadow = Color( 0.196078, 0.243137, 0.309804, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Settings:"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="popup_settings_apply_button" type="Button" parent="popup_settings" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 440.0
margin_top = 612.0
margin_right = 760.0
margin_bottom = 668.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0.921569, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0.921569, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Apply"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]

[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]

[connection signal="pressed" from="about_button" to="." method="_on_about_button_pressed"]

[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]

[connection signal="pressed" from="popup_settings/popup_settings_apply_button" to="popup_settings" method="_on_popup_settings_apply_button_pressed"]


